# Serialization

./: CMakeLists.txt  README.md  data.h  data.json  nlohmann_json.json  rapidjson.json
cmake/: Findrapidjson.cmake
src/: main.cpp
